[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "postgres-mongo-replication"
version = "0.1.0"
description = "Background replication pipeline from PostgreSQL to MongoDB"
requires-python = ">=3.11"
dependencies = [
    "croniter==6.0.0",
    "psycopg[binary]==3.2.6",
    "pymongo==4.11.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
